--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -51,7 +51,7 @@
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		      <a class="small text-dark stretched-link col-center" href="#">Mode</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="fsm_state">0</span></div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="fsm_state">IDLE</span></div>
 	    </div>
 	  </div>
 	  
