--- a/raspberry-backend/templates/index_prototype.html
+++ b/raspberry-backend/templates/index_prototype.html
@@ -51,7 +51,7 @@
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		      <a class="small text-dark stretched-link col-center" href="#">State</a>
               </div>
-              <div class="card-body px-1 py-3"><span class = "reading-main" id="fsm_state">000.00</span></div>
+              <div class="card-body px-1 py-3"><span class = "reading-main" id="fsm_state">IDLE</span></div>
 	    </div>
 	  </div>
 	  
