minor changes to index

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -105,7 +105,7 @@
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Tidal Volume Inhaled</a>
+		<a class="small text-dark stretched-link col-center" href="#">Inhaled Tidal Volume</a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_inhale">000.00</span> mL</div>
 	    </div>
@@ -113,7 +113,7 @@
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Tidal Volume Exhaled</a>
+		<a class="small text-dark stretched-link col-center" href="#">Exhaled Tidal Volume</a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_patient">000.00</span> mL</div>
 	    </div>
@@ -121,7 +121,7 @@
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Minute Volume Inhaled</a>
+		<a class="small text-dark stretched-link col-center" href="#">Inhaled Minute Volume</a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_diff_patient">000.00</span> mL</div>
 	    </div>
@@ -132,7 +132,7 @@
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Minute Volume Exhaled</a>
+		<a class="small text-dark stretched-link col-center" href="#">Exhaled Minute Volume</a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_inhale">000.00</span> mL</div>
 	    </div>
