--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -43,15 +43,16 @@
           </div>
 	</div>
       </div>
-    
+
+
       <div class = "col-md-5 py-0 px-0 mr-0 pl-1">
 	<div class="row">
-	  <div class="col-xl-4 px-1 py-0 mr-0">
+	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		      <a class="small text-dark stretched-link col-center" href="#">Mode</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="fsm_state">IDLE</span></div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="ventilation_mode">PC-A/C</span></div>
 	    </div>
 	  </div>
 	  
@@ -95,7 +96,7 @@
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark stretched-link col-center" href="#">PEEP</a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_buffer">000.00</span> cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_buffer">5</span> cmH2O</div>
 	    </div>
 	  </div>
 	  
@@ -143,7 +144,7 @@
 		<a class="small text-dark stretched-link col-center" href="#">I:E Ratio</a>
               </div>
 	      
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_patient">000.00</span> </div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_patient">1.3</span> </div>
 	    </div>
 	  </div>
 	  <div class="col-xl-4 px-1 py-0">
@@ -204,7 +205,7 @@
 	function update_variables() {
 	$.getJSON("live-data",
 		function (data) {
-<!--
+/*
 		document.getElementById("pressure_buffer").innerHTML = data.pressure_buffer.toPrecision(5);
 		document.getElementById("pressure_inhale").innerHTML = data.pressure_inhale.toPrecision(5);
 	//document.getElementById("temperature_buffer").innerHTML = data.temperature_buffer.toPrecision(5);
@@ -216,17 +217,17 @@
 		document.getElementById("pressure_diff_patient").innerHTML = data.pressure_diff_patient.toPrecision(5);		
 		document.getElementById("fsm_state").innerHTML = data.fsm_state.toPrecision(1);
 		//document.getElementById("version").innerHTML = data.version.toPrecision(1); //Commented because not included in the html part
--->
-		document.getElementById("pressure_buffer").innerHTML = (data.pressure_buffer).toFixed(2);
+*/
+	//document.getElementById("pressure_buffer").innerHTML = (data.pressure_buffer).toFixed(2);
 		document.getElementById("pressure_inhale").innerHTML = (data.pressure_inhale).toFixed(2);
 //document.getElementById("temperature_buffer").innerHTML = (data.temperature_buffer).toFixed(2);
 		document.getElementById("pressure_air_supply").innerHTML = (data.pressure_air_supply).toFixed(2);
 		document.getElementById("pressure_air_regulated").innerHTML = (data.pressure_air_regulated).toFixed(2);		
 		document.getElementById("pressure_o2_supply").innerHTML = (data.pressure_o2_supply).toFixed(2);
 		document.getElementById("pressure_o2_regulated").innerHTML = (data.pressure_o2_regulated).toFixed(2);
-		document.getElementById("pressure_patient").innerHTML = (data.pressure_patient).toFixed(2);
+//document.getElementById("pressure_patient").innerHTML = (data.pressure_patient).toFixed(2);
 		document.getElementById("pressure_diff_patient").innerHTML = (data.pressure_diff_patient).toFixed(2);		
-		document.getElementById("fsm_state").innerHTML = (data.fsm_state).toFixed(2);
+//document.getElementById("fsm_state").innerHTML = (data.fsm_state).toFixed(2);
 		//document.getElementById("version").innerHTML = (data.version).toFixed(2); //Commented because not included in the html part
 		}
 	);
