--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -61,33 +61,33 @@
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark stretched-link col-center" href="#">FIO<sub>2</sub></a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_air_supply">000.00</span>cmH2O</div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "fio2">62</span>%</div>
 	    </div>
 	  </div>
 
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Peak Pressure</a>
+		<a class="small text-dark stretched-link col-center" href="#">P<sub>Peak</sub></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="pressure_air_regulated">000.00</span>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="p_peak">20.0</span>cmH2O</div>
 	    </div>
 	  </div>
 	  
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Plateau Pressure</a>
+		<a class="small text-dark stretched-link col-center" href="#">P<sub>Plateau</sub></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_o2_supply">000.00</span>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "p_plateau">4.0</span>cmH2O</div>
 	    </div>
 	  </div>	  
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Mean Pressure</a>
+		<a class="small text-dark stretched-link col-center" href="#">P<sub>Mean</sub></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_o2_regulated">000.00</span>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "p_mean">13.0</span>cmH2O</div>
 	    </div>
 	  </div>	  	  
 	  
@@ -106,25 +106,25 @@
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Inhaled Tidal Volume</a>
+		<a class="small text-dark stretched-link col-center" href="#">VTI</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_inhale">000.00</span> mL</div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "vti">285</span> mL</div>
 	    </div>
 	  </div>
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Exhaled Tidal Volume</a>
+		<a class="small text-dark stretched-link col-center" href="#">VTE</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_patient">000.00</span> mL</div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "vte">273</span> mL</div>
 	    </div>
 	  </div>
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Inhaled Minute Volume</a>
+		<a class="small text-dark stretched-link col-center" href="#">MVI</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_diff_patient">000.00</span> mL</div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mvi">6.5</span> L/min</div>
 	    </div>
 	  </div>
 	</div>
@@ -133,9 +133,9 @@
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">Exhaled Minute Volume</a>
+		<a class="small text-dark stretched-link col-center" href="#">MVE</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_inhale">000.00</span> mL</div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mve">6.0</span> L/min</div>
 	    </div>
 	  </div>
 	  <div class="col-xl-4 px-1 py-0">
@@ -144,7 +144,7 @@
 		<a class="small text-dark stretched-link col-center" href="#">I:E Ratio</a>
               </div>
 	      
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_patient">1.3</span> </div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "ie_ratio">1.3</span> </div>
 	    </div>
 	  </div>
 	  <div class="col-xl-4 px-1 py-0">
@@ -219,14 +219,14 @@
 		//document.getElementById("version").innerHTML = data.version.toPrecision(1); //Commented because not included in the html part
 */
 	//document.getElementById("pressure_buffer").innerHTML = (data.pressure_buffer).toFixed(2);
-		document.getElementById("pressure_inhale").innerHTML = (data.pressure_inhale).toFixed(2);
+		//document.getElementById("pressure_inhale").innerHTML = (data.pressure_inhale).toFixed(2);
 //document.getElementById("temperature_buffer").innerHTML = (data.temperature_buffer).toFixed(2);
-		document.getElementById("pressure_air_supply").innerHTML = (data.pressure_air_supply).toFixed(2);
-		document.getElementById("pressure_air_regulated").innerHTML = (data.pressure_air_regulated).toFixed(2);		
-		document.getElementById("pressure_o2_supply").innerHTML = (data.pressure_o2_supply).toFixed(2);
-		document.getElementById("pressure_o2_regulated").innerHTML = (data.pressure_o2_regulated).toFixed(2);
+		//document.getElementById("pressure_air_supply").innerHTML = (data.pressure_air_supply).toFixed(2);
+		//document.getElementById("pressure_air_regulated").innerHTML = (data.pressure_air_regulated).toFixed(2);		
+		//document.getElementById("pressure_o2_supply").innerHTML = (data.pressure_o2_supply).toFixed(2);
+		//document.getElementById("pressure_o2_regulated").innerHTML = (data.pressure_o2_regulated).toFixed(2);
 //document.getElementById("pressure_patient").innerHTML = (data.pressure_patient).toFixed(2);
-		document.getElementById("pressure_diff_patient").innerHTML = (data.pressure_diff_patient).toFixed(2);		
+		//document.getElementById("pressure_diff_patient").innerHTML = (data.pressure_diff_patient).toFixed(2);		
 //document.getElementById("fsm_state").innerHTML = (data.fsm_state).toFixed(2);
 		//document.getElementById("version").innerHTML = (data.version).toFixed(2); //Commented because not included in the html part
 		}
