--- a/raspberry-backend/templates/index_prototype.html
+++ b/raspberry-backend/templates/index_prototype.html
@@ -235,14 +235,14 @@
 		function (data) {
 		document.getElementById("pressure_buffer").innerHTML = (data.pressure_buffer).toFixed(2);
 		document.getElementById("pressure_inhale").innerHTML = (data.pressure_inhale).toFixed(2);
-		document.getElementById("temperature_buffer").innerHTML = (data.temperature_buffer).toFixed(2);
+		//document.getElementById("temperature_buffer").innerHTML = (data.temperature_buffer).toFixed(2);
 		document.getElementById("pressure_air_supply").innerHTML = (data.pressure_air_supply).toFixed(2);
-		document.getElementById("pressure_air_regulated").innerHTML = (data.pressure_air_regulated).toFixed(2);		
+		document.getElementById("pressure_air_regulated").innerHTML = (data.pressure_air_regulated).toFixed(2);
 		document.getElementById("pressure_o2_supply").innerHTML = (data.pressure_o2_supply).toFixed(2);
 		document.getElementById("pressure_o2_regulated").innerHTML = (data.pressure_o2_regulated).toFixed(2);
 		document.getElementById("pressure_patient").innerHTML = (data.pressure_patient).toFixed(2);
-		document.getElementById("pressure_diff_patient").innerHTML = (data.pressure_diff_patient).toFixed(2);		
-		document.getElementById("fsm_state").innerHTML = (data.fsm_state).toFixed(2);
+		document.getElementById("pressure_diff_patient").innerHTML = (data.pressure_diff_patient).toFixed(2);	
+		document.getElementById("fsm_state").innerHTML = data.fsm_state;
 		//document.getElementById("version").innerHTML = (data.version).toFixed(2); //Commented because not included in the html part
 		}
 	);
