--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -12,146 +12,166 @@
     <div class = "row">
       <div class = "col-md-7 py-0">
 	<div class="row col-center pb-1">
-	<select id='chart_variables' multiple="multiple" class="form-select">
-		<option value='pressure_air_supply' selected>Air (supply)</option>
-		<option value='pressure_air_regulated' selected>Air (regulated)</option>
-		<option value='pressure_o2_supply' selected>O2 (supply)</option>
-		<option value='pressure_o2_regulated' selected>O2 (regulated)</option>
-        <option value='pressure_buffer' selected>Buffer</option>
-        <option value='pressure_inhale' selected>Inhale</option>
-		<option value='temperature_buffer' selected>temperature_buffer</option> 
-		<option value='pressure_patient' selected>Patient</option>
-		<option value='pressure_diff_patient' selected>Patient (diff)</option>
-		
-		<!-- VICTOR test -->
-		<option value='pressure_buffer' selected>Pressure</option>
-		<option value='pressure_inhale' selected>Flow</option>
-		<option value='temperature_buffer' selected>Volume</option>
-
-
-
-	</select>
-        <input class="form-button" type="button" value="Submit" onclick="updateChartType()">
+	  <div class = "col-md-12">
+	    <select id='chart_variables2' multiple class="form-control pickout tiny" placeholder = "Select Plots">
+	      <option value='pressure_air_supply' selected>Air (supply)</option>
+	      <option value='pressure_air_regulated' selected>Air (regulated)</option>
+	      <option value='pressure_o2_supply' selected>O2 (supply)</option>
+	      <option value='pressure_o2_regulated' selected>O2 (regulated)</option>
+	      <option value='pressure_buffer' selected>Buffer</option>
+	      <option value='pressure_inhale' selected>Inhale</option>
+	      <option value='temperature_buffer' selected>temperature_buffer</option> 
+	      <option value='pressure_patient' selected>Patient</option>
+	      <option value='pressure_diff_patient' selected>Patient (diff)</option>
+	      <!-- VICTOR test -->
+	      <option value='pressure_buffer' selected>Pressure</option>
+	      <option value='pressure_inhale' selected>Flow</option>
+	      <option value='temperature_buffer' selected>Volume</option>
+	    </select>
+            <!-- <input class="form-button" type="button" value="Submit" onclick="updateChartType()">-->
+	  </div>
 	</div>
-
+	<!-- chart on left -->
+	
 	<div class="row">
           <div class="col-md-12">
             <div class="card mb-6">
-              <!--<div class="card-chart-header small ">Variable number 1</div>-->
               <div class="card-body px-0 py-0 tiny"><canvas id="pressure_air_supply" width="100%" height="80px"></canvas></div>
             </div>
           </div>
 	</div>
       </div>
 
-
+      
       <div class = "col-md-5 py-0 px-0 mr-0 pl-1">
+	<!---- row 1 -->
 	<div class="row">
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		      <a class="small text-dark stretched-link col-center" href="#">Mode</a>
+		      <span class="small text-dark col-center" href="#">Mode</span>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="ventilation_mode">PC-A/C</span></div>
+              <div class="card-body px-1 py-1 ml-auto mr-auto">
+		<select class = "input-reading input-editable" name="VentilatorMode" id="vent_mode" placeholder = "PC-A/C" disabled readOnly>
+		  <optgroup label = "Pressure Control Modes">
+		  <option value="opt1" selected>PC-A/C</option>
+		  <option value="opt2">PC-A/C-PRVC</option>
+		  </optgroup>
+		  <optgroup label = "Pressure Support Modes">
+		  <option value="opt3">PC-PSV</option>
+		  <option value="opt4">CPAP</option>
+		  </optgroup>
+		</select>
+	      </div>
 	    </div>
 	  </div>
 	  
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">FIO<sub>2</sub></a>
+		<a class="small text-dark col-center" href="#">FIO<sub>2</sub></a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "fio2">62</span>%</div>
+              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div>
 	    </div>
 	  </div>
 
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">P<sub>Peak</sub></a>
+		<a class="small text-dark col-center" href="#">P<sub>Peak</sub></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="p_peak">20.0</span>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id="p_peak" readOnly disabled value=20.0>cmH2O</div>
 	    </div>
 	  </div>
-	  
+	</div>
+	<!--- end row 1 -->
+	
+	<!-- row 2 -->
+	<div class = "row">
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">P<sub>Plateau</sub></a>
+		<a class="small text-dark col-center" href="#">P<sub>Plateau</sub></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "p_plateau">4.0</span>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div>
 	    </div>
 	  </div>	  
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">P<sub>Mean</sub></a>
+		<a class="small text-dark col-center" href="#">P<sub>Mean</sub></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "p_mean">13.0</span>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_mean" value=13.0 readOnly disabled>cmH2O</div>
 	    </div>
 	  </div>	  	  
 	  
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">PEEP</a>
+		<a class="small text-dark col-center" href="#">PEEP</a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "pressure_buffer">5</span> cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable"  onclick="show_easy_numpad_wrapper(this);" id = "pressure_buffer" value=5 readOnly disabled>cmH2O</div>
 	    </div>
 	  </div>
 	  
 	</div>
+
+	<!-- end row 2 -->
+	
+	<!-- row 3 -->
 	
 	<div class="row">
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">VTI</a>
+		<a class="small text-dark col-center" href="#">VTI</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "vti">285</span> mL</div>
+              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "vti" value=285 readOnly disabled></span> mL</div>
 	    </div>
 	  </div>
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">VTE</a>
+		<a class="small text-dark col-center" href="#">VTE</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "vte">273</span> mL</div>
+              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "vte" value=273 readOnly disabled>mL</div>
 	    </div>
 	  </div>
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">MVI</a>
+		<a class="small text-dark col-center" href="#">MVI</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mvi">6.5</span> L/min</div>
+              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "mvi" value=6.5 readOnly disabled>L/min</div>
 	    </div>
 	  </div>
 	</div>
-	
+
+	<!-- row 4 -->
 	<div class="row">
+
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">MVE</a>
+		<a class="small text-dark col-center" href="#">MVE</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mve">6.0</span> L/min</div>
+              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "mve" value=6.0 readOnly disabled> L/min</div>
 	    </div>
 	  </div>
+
 	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark stretched-link col-center" href="#">I:E Ratio</a>
+		<a class="small text-dark col-center" href="#">I:E Ratio</a>
               </div>
-	      
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "ie_ratio">1.3</span> </div>
+              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable" id = "ie_ratio" value=1.3 readOnly disabled> </div>
 	    </div>
 	  </div>
+
 	  <div class="col-xl-4 px-1 py-0">
 	  </div>
 	</div>
-	<div class = "row no-gutters ml-auto mr-auto py-2">
-	</div>
+	<!-- end row 4 -->
       </div>
     </div>
   </div>
@@ -160,46 +180,6 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/Chart-plot.js') }}"></script>
-<script type=text/javascript>
-  function toggle_lock_settings() {
-  setTimeout(function(){
-  var x = document.getElementsByClassName("form-control");
-  var i;
-  if ( x.length > 0 && x[0].readOnly == true ){
-  for (i = 0; i < x.length; i++) {
-		  if (x[i].id != "form_submit"){
-		     x[i].readOnly = false;
-		  }
-		  else{
-		     x[i].disabled=false;
-		  }
-		  var submit = document.getElementById("form_submit");
-		  submit.disabled=false;
-		  }
-          var el = document.getElementById("path-locked");
-          el.classList.add("transparent");
-		  var el2 = document.getElementById("path-unlocked");
-		  el2.classList.remove("transparent");
-
-		  } else {
-		  for (i = 0; i < x.length; i++ ) {
-			if (x[i].id != "form_submit"){
-			x[i].readOnly = true;
-			}
-		    else {x[i].disabled=true; }
-				  
-		    var submit = document.getElementById("form_submit");
-		    submit.disabled=true;
-		    var el = document.getElementById("path-unlocked");
-		    el.classList.add("transparent");
-		    var el2 = document.getElementById("path-locked");
-		    el2.classList.remove("transparent");		  
-		  }
-		  }
-	500})
-    }				 
-</script>
 
 <script type=text/javascript>
 	function update_variables() {
@@ -241,5 +221,34 @@
 	{% endblock %}
 	{% block body_scripts %}
 
-        <script src="{{ url_for('static', filename='js/Chart-plot.js') }}"></script>
-	{% endblock %}
+<script src="{{ url_for('static', filename='js/Chart-plot.js') }}"></script>
+
+	<script>
+var prev_val;
+
+$('.input-editable').focus(function() {
+    prev_val = $(this).val();
+}).change(function() {
+     $(this).blur() // Firefox fix as suggested by AgDude
+    var success = confirm('Are you sure you want to change the ' + $(this).name + " from" + prev_val + " to " + $(this).val());
+    if(success)
+{
+//send to hevserver
+$(this).val($(this).val());
+    }  
+    else
+    {
+        $(this).val(prev_val);
+}
+lock();
+});
+	</script>
+	<script>
+pickout.to({
+el:'.pickout',
+});
+
+</script>
+
+
+{% endblock %}
