templates/base.html

--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -62,7 +62,7 @@
       </nav>
         <div id="layoutSidenav">
           <div id="layoutSidenav_nav" class="py-1">
-                <nav class="sb-sidenav br-red accordion sb-sidenav-dark px-1" id="sidenavAccordion">
+                <nav class="sb-sidenav accordion sb-sidenav-dark px-1" id="sidenavAccordion">
                   <div class="sb-sidenav-menu">
                     <div class="nav">
 		      <a href="/"> <div id="fan-icon" class = "sb-nav-link-icon border-invisible {{'active' if fan_active }}">
@@ -94,7 +94,7 @@
                 </nav>
 	  </div>
 
-	  <div id="layoutSidenav_content" class="mx-0 my-0 mr-0 vh-25 br-red">
+	  <div id="layoutSidenav_content" class="mx-0 my-0 mr-0">
 	    {% block content %}
 	    {% endblock %}
           </div>
