--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -11,10 +11,13 @@
         <link href="{{ url_for('static', filename='css/multiselect.css') }}" rel="stylesheet">
 	<link href="{{ url_for('static', filename='css/easy-numpad.css') }}" rel="stylesheet">
 	<link href="{{ url_for('static', filename='css/pickout.css') }}" rel="stylesheet">
+	<link href="{{ url_for('static', filename='css/notifications.css') }}" rel="stylesheet">
+
         <script src="{{ url_for('static', filename='js/all.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/multiselect.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/easy-numpad.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/pickout.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
 	{% block scripts %}
 	{% endblock %}
     </head>
@@ -110,6 +113,23 @@
 	{% block body_scripts %}
 	{% endblock %}
 	<script>
+	  var lockTimer;
+	  var unlocked = Boolean(false);
+
+	  function timeOutLock(){
+		window.createNotification({
+			closeOnClick: 1,
+			displayCloseButton: 0,
+			positionClass: "nfc-bottom-right",
+			showDuration: false,
+			theme: "info"
+		})({
+			title: "Screen Lock",
+			message: "Screen has locked due to timeout"
+	  });
+	  lock();
+	  }
+	  
 	  function startTime() {
 	  var today = new Date();
 	  var h = today.getHours();
@@ -162,18 +182,20 @@
 			  el.classList.add("transparent");
 			  var el2 = document.getElementById("path-unlocked-main");
 			  el2.classList.remove("transparent");
-			  
-			  //setTimeout(lock(),1000);
+			  unlocked = 1;
+			  clearTimeout(lockTimer);
+			  lockTimer = setTimeout('timeOutLock()', 10000);
 			  }
 	  
-	  function lock() {
+			  function lock() {
+
 	  var x = document.getElementsByClassName("input-editable");
 			  for (i = 0; i < x.length; i++) {x[i].readOnly=true;x[i].disabled = true;}
 			  var el = document.getElementById("path-locked-main");
 			  el.classList.remove("transparent");
 			  var el2 = document.getElementById("path-unlocked-main");
 			  el2.classList.add("transparent");
-
+					  unlocked = 0;
 					  }
 			  function toggle_lock() {
 					  setTimeout(function(){
@@ -183,7 +205,22 @@
 			  },500);
 			  }
 						  
+
+			  
 	  
+	$(this).mousemove(function (e) {
+			  if (unlocked) {
+			  clearTimeout(lockTimer);
+			  lockTimer = setTimeout('timeOutLock()', 10000);
+			  }
+			  })
+	$(this).keypress(function (e) {
+			  if (unlocked) {
+			  clearTimeout(lockTimer);
+			  lockTimer = setTimeout('timeOutLock()', 10000);}
+			  })
+
+			  
 	  var battery = 100;
 	  function update_battery() {
 	  // set all transparent
