--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -12,8 +12,8 @@
     <div class = "row">
       <div class = "col-md-7 py-0">
 	<div class="row col-center pb-1">
-	  <div class = "col-md-12">
-	    <select id='chart_variables2' multiple class="form-control pickout tiny" placeholder = "Select Plots">
+	  <div class = "col-md-8 px-0 py-0">
+	    <select id='chart_variables' multiple placeholder = "Select Plots">
 	      <option value='pressure_air_supply' selected>Air (supply)</option>
 	      <option value='pressure_air_regulated' selected>Air (regulated)</option>
 	      <option value='pressure_o2_supply' selected>O2 (supply)</option>
@@ -28,7 +28,9 @@
 	      <option value='pressure_inhale' selected>Flow</option>
 	      <option value='temperature_buffer' selected>Volume</option>
 	    </select>
-            <!-- <input class="form-button" type="button" value="Submit" onclick="updateChartType()">-->
+	  </div>
+	  <div class = "col-md-3">
+            <input class="form-button" type="button" value="Submit" onclick="updateChartType()">
 	  </div>
 	</div>
 	<!-- chart on left -->
@@ -52,7 +54,7 @@
 		      <span class="small text-dark col-center" href="#">Mode</span>
               </div>
               <div class="card-body px-1 py-1 ml-auto mr-auto">
-		<select class = "input-reading input-editable" name="VentilatorMode" id="vent_mode" placeholder = "PC-A/C" disabled readOnly>
+		<select class = "input-reading input-editable br-red" name="VentilatorMode" id="vent_mode" placeholder = "PC-A/C" disabled readOnly>
 		  <optgroup label = "Pressure Control Modes">
 		  <option value="opt1" selected>PC-A/C</option>
 		  <option value="opt2">PC-A/C-PRVC</option>
@@ -110,7 +112,7 @@
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">PEEP</a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable"  onclick="show_easy_numpad_wrapper(this);" id = "pressure_buffer" value=5 readOnly disabled>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable"  onclick="show_easy_numpad_wrapper(this);lock();" id = "pressure_buffer" value=5 readOnly disabled>cmH2O</div>
 	    </div>
 	  </div>
 	  
@@ -164,7 +166,7 @@
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">I:E Ratio</a>
               </div>
-              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable" id = "ie_ratio" value=1.3 readOnly disabled> </div>
+              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable" id = "ie_ratio" value=1.3 readOnly disabled   onclick="show_easy_numpad_wrapper(this);lock();"> </div>
 	    </div>
 	  </div>
 
@@ -246,6 +248,7 @@ lock();
 	<script>
 pickout.to({
 el:'.pickout',
+theme:'MySelector'
 });
 
 </script>
