Added loop plots to the main menu and tidyed up names

--- a/raspberry-backend/templates/chartsLoop.html
+++ b/raspberry-backend/templates/chartsLoop.html
@@ -1,4 +1,4 @@
-{% set charts_active = True %}
+{% set chartsLoop_active = True %}
 {% extends 'base.html' %}
 {% block content %}
 <main>
@@ -30,5 +30,5 @@
 {% endblock %}
 
 {% block body_scripts %}
-<script src="{{ url_for('static', filename='js/Chart-display3.js') }}"></script> -->
+<script src="{{ url_for('static', filename='js/Chart-displayLoop.js') }}"></script> -->
 {% endblock %}
