made display scalable, simplified structure significantly

--- a/raspberry-backend/templates/charts.html
+++ b/raspberry-backend/templates/charts.html
@@ -15,28 +15,16 @@
 
       <div class = "col-md-10 py-0">
 	<div class="row">
-          <div class="col-md-12">
-            <div class="card mb-6">
               <!-- <div class="card-chart-header small ">Pressure [mbar]</div> -->
-              <div class="card-body px-0 py-0"><canvas id="pressure_chart" width="200%" height="30"></canvas></div>
-            </div>
-          </div>
+              <div class="main-chart-container"><canvas id="pressure_chart"></canvas></div>
 	</div>
 	<div class = "row">
-          <div class="col-md-12">
-            <div class="card mb-6 px-0 py-0">
               <!-- <div class="card-chart-header small">Flow [mL/min]</div> -->
-	      <div class="card-body px-0 py-0"><canvas id="flow_chart" width="200%" height="30"></canvas></div>
-	    </div>
-	  </div>
+	      <div class="main-chart-container"><canvas id="flow_chart"></canvas></div>
 	</div>
 	<div class = "row">
-	  <div class="col-md-12">
-	    <div class="card mb-6 px-0 py-0">
 	      <!-- <div class="card-chart-header small ">Volume [mL]</div> -->
-	      <div class="card-body px-0 py-0"><canvas id="volume_chart" width="200%" height="30"></canvas></div>
-	    </div>
-	  </div>
+	      <div class="main-chart-container"><canvas id="volume_chart"></canvas></div>
 	</div>
       </div>
     
