--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -22,6 +22,7 @@
 	{% endblock %}
     </head>
     <body class="sb-nav-fixed {{'no-scroll-lock' if logs_active}}">
+      
       <nav class="sb-topnav navbar navbar-expand navbar-dark bg-white px-0 py-0">
 	<!-- Logo -->
         <a class="navbar-brand" href=""><img src="{{ url_for('static', filename='img/cern-hev-logo.png') }}" id="logo"></a>
@@ -52,6 +53,7 @@
 	    <path class="path-icon-alarm transparent" id ="battery-one-quarter" d="M544 160v64h32v64h-32v64H64V160h480m16-64H48c-26.51 0-48 21.49-48 48v224c0 26.51 21.49 48 48 48h512c26.51 0 48-21.49 48-48v-16h8c13.255 0 24-10.745 24-24V184c0-13.255-10.745-24-24-24h-8v-16c0-26.51-21.49-48-48-48zm-336 96H96v128h128V192z">
 	  </svg>
 	</ul>
+	<!--
 	<ul class = "navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
 	  <a class="unlock" id="toggle_lock" onclick="toggle_lock()">
 		    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock" class="svg-inline--fa fa-lock fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -60,7 +62,7 @@
 		    </svg>
 		  </a>
 	   </ul>
-
+	-->
 	
       </nav>
         <div id="layoutSidenav">
@@ -108,6 +110,19 @@
 	    {% endblock %}
           </div>
 	</div>
+
+
+	
+      <div class = "lock">
+      <a class="unlock" id="toggle_lock" onclick="toggle_lock()">
+	  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock" class="fa-lock" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+	    <path class="path-icon" id = "path-locked-main" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
+	    <path class="path-icon transparent" id="path-unlocked-main" d="M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
+	  </svg>
+	  </a>
+      </div>
+
+	
         <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/Chart.min.js') }}"></script>
@@ -217,7 +232,7 @@
 			  el2.classList.add("transparent");
 					  unlocked = 0;
 					  }
-			  function toggle_lock() {
+					  function toggle_lock() {
 					  setTimeout(function(){
 					  var x = document.getElementsByClassName("input-editable");
 			  if ( x.length > 0 && x[0].readOnly == false ){lock();}
