--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -8,53 +8,34 @@
 <main>
 
   <div class="container-fluid">
-    <!--<h1 class="mt-4">Info</h1> !-->
     <div class = "row">
-      <div class = "col-md-7 py-0">
-	<div class="row col-center pb-1">
-	  <div class = "col-md-8 px-0 py-0">
-	    <select id='chart_variables' multiple placeholder = "Select Plots">
-	      <option value='pressure_air_supply' selected>Air (supply)</option>
-	      <option value='pressure_air_regulated' selected>Air (regulated)</option>
-	      <option value='pressure_o2_supply' selected>O2 (supply)</option>
-	      <option value='pressure_o2_regulated' selected>O2 (regulated)</option>
-	      <option value='pressure_buffer' selected>Buffer</option>
-	      <option value='pressure_inhale' selected>Inhale</option>
-	      <option value='temperature_buffer' selected>temperature_buffer</option> 
-	      <option value='pressure_patient' selected>Patient</option>
-	      <option value='pressure_diff_patient' selected>Patient (diff)</option>
-	      <!-- VICTOR test -->
-	      <option value='pressure_buffer' selected>Pressure</option>
-	      <option value='pressure_inhale' selected>Flow</option>
-	      <option value='temperature_buffer' selected>Volume</option>
-	    </select>
-	  </div>
-	  <div class = "col-md-3">
-            <input class="form-button" type="button" value="Submit" onclick="updateChartType()">
-	  </div>
-	</div>
+      <div class = "col-charts-main">
 	<!-- chart on left -->
-	
-	<div class="row">
-          <div class="col-md-12">
-            <div class="card mb-6">
-              <div class="card-body px-0 py-0 tiny"><canvas id="pressure_air_supply" width="100%" height="80px"></canvas></div>
-            </div>
-          </div>
+	      <div class="row">
+		<div class="col-md-12">
+		    <div class = "main-chart-container"><canvas id="pressure_chart"></canvas></div>
+		</div>
+	      </div>
+	      <div class = "row">
+		<div class="col-md-12">
+		  <div class="main-chart-container"><canvas id="flow_chart"></canvas></div>
+		</div>
+	      </div>
+	      <div class = "row">
+		<div class="col-md-12">
+		  <div class = "main-chart-container"><canvas id="volume_chart"></canvas></div>
+		</div>
 	</div>
       </div>
-
-      
-      <div class = "col-md-5 py-0 px-0 mr-0 pl-1">
+      <div class = "col-cards-main">
+	<div class = "row">
 	<!---- row 1 -->
-	<div class="row">
-	  <div class="col-xl-4 px-1 py-0">
-	    <div class="card bg-primary text-dark mb-2">
+	    <div class="card-reading br-red">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		      <span class="small text-dark col-center" href="#">Mode</span>
               </div>
-              <div class="card-body px-1 py-1 ml-auto mr-auto">
-		<select class = "input-reading input-editable br-red" name="VentilatorMode" id="vent_mode" placeholder = "PC-A/C" disabled readOnly>
+              <div class="card-body px-1 py-1">
+		<select class = "input-reading input-editable" name="VentilatorMode" id="vent_mode" placeholder = "PC-A/C" disabled readOnly>
 		  <optgroup label = "Pressure Control Modes">
 		  <option value="opt1" selected>PC-A/C</option>
 		  <option value="opt2">PC-A/C-PRVC</option>
@@ -65,118 +46,95 @@
 		  </optgroup>
 		</select>
 	      </div>
-	    </div>
 	  </div>
-	  
-	  <div class="col-xl-4 px-1 py-0 mr-0">
-	    <div class="card bg-primary text-dark mb-2">
+
+	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">FIO<sub>2</sub></a>
               </div>
               <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div>
-	    </div>
 	  </div>
 
-	  <div class="col-xl-4 px-1 py-0 mr-0">
-	    <div class="card bg-primary text-dark mb-2">
+	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">P<sub>Peak</sub></a>
 	      </div>
 	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id="p_peak" readOnly disabled value=20.0>cmH2O</div>
 	    </div>
-	  </div>
-	</div>
-	<!--- end row 1 -->
 	
+	<!--- end row 1 -->
+
 	<!-- row 2 -->
-	<div class = "row">
-	  <div class="col-xl-4 px-1 py-0 mr-0">
-	    <div class="card bg-primary text-dark mb-2">
+	
+	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">P<sub>Plateau</sub></a>
 	      </div>
 	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div>
-	    </div>
-	  </div>	  
-	  <div class="col-xl-4 px-1 py-0 mr-0">
-	    <div class="card bg-primary text-dark mb-2">
+	  </div>
+	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">P<sub>Mean</sub></a>
 	      </div>
 	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_mean" value=13.0 readOnly disabled>cmH2O</div>
-	    </div>
-	  </div>	  	  
-	  
-	  <div class="col-xl-4 px-1 py-0">
-	    <div class="card bg-primary text-dark mb-2">
+	  </div>
+
+	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">PEEP</a>
 	      </div>
 	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable"  onclick="show_easy_numpad_wrapper(this);lock();" id = "pressure_buffer" value=5 readOnly disabled>cmH2O</div>
 	    </div>
-	  </div>
-	  
-	</div>
+
 
 	<!-- end row 2 -->
-	
+
 	<!-- row 3 -->
-	
-	<div class="row">
-	  <div class="col-xl-4 px-1 py-0">
-	    <div class="card bg-primary text-dark mb-2">
+
+
+	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">VTI</a>
               </div>
               <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "vti" value=285 readOnly disabled></span> mL</div>
-	    </div>
 	  </div>
-	  <div class="col-xl-4 px-1 py-0">
-	    <div class="card bg-primary text-dark mb-2">
+	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">VTE</a>
               </div>
               <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "vte" value=273 readOnly disabled>mL</div>
 	    </div>
-	  </div>
-	  <div class="col-xl-4 px-1 py-0">
-	    <div class="card bg-primary text-dark mb-2">
+	    
+	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
 		<a class="small text-dark col-center" href="#">MVI</a>
               </div>
               <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "mvi" value=6.5 readOnly disabled>L/min</div>
 	    </div>
-	  </div>
-	</div>
+	    
+
 
 	<!-- row 4 -->
-	<div class="row">
 
-	  <div class="col-xl-4 px-1 py-0">
-	    <div class="card bg-primary text-dark mb-2">
+
+	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
 		<a class="small text-dark col-center" href="#">MVE</a>
               </div>
               <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "mve" value=6.0 readOnly disabled> L/min</div>
 	    </div>
-	  </div>
-
-	  <div class="col-xl-4 px-1 py-0">
-	    <div class="card bg-primary text-dark mb-2">
+	    
+	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">I:E Ratio</a>
               </div>
               <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable" id = "ie_ratio" value=1.3 readOnly disabled   onclick="show_easy_numpad_wrapper(this);lock();"> </div>
 	    </div>
-	  </div>
-
-	  <div class="col-xl-4 px-1 py-0">
-	  </div>
 	</div>
 	<!-- end row 4 -->
-      </div>
     </div>
-  </div>
+</div>
+</div>
 </div>
 </main>
 {% endblock %}
@@ -192,11 +150,11 @@
 		document.getElementById("pressure_inhale").innerHTML = data.pressure_inhale.toPrecision(5);
 	//document.getElementById("temperature_buffer").innerHTML = data.temperature_buffer.toPrecision(5);
 		document.getElementById("pressure_air_supply").innerHTML = data.pressure_air_supply.toPrecision(5);
-		document.getElementById("pressure_air_regulated").innerHTML = data.pressure_air_regulated.toPrecision(5);		
+		document.getElementById("pressure_air_regulated").innerHTML = data.pressure_air_regulated.toPrecision(5);
 		document.getElementById("pressure_o2_supply").innerHTML = data.pressure_o2_supply.toPrecision(5);
 		document.getElementById("pressure_o2_regulated").innerHTML = data.pressure_o2_regulated.toPrecision(5);
 		document.getElementById("pressure_patient").innerHTML = data.pressure_patient.toPrecision(5);
-		document.getElementById("pressure_diff_patient").innerHTML = data.pressure_diff_patient.toPrecision(5);		
+		document.getElementById("pressure_diff_patient").innerHTML = data.pressure_diff_patient.toPrecision(5);
 		document.getElementById("fsm_state").innerHTML = data.fsm_state.toPrecision(1);
 		//document.getElementById("version").innerHTML = data.version.toPrecision(1); //Commented because not included in the html part
 */
@@ -204,11 +162,11 @@
 		//document.getElementById("pressure_inhale").innerHTML = (data.pressure_inhale).toFixed(2);
 //document.getElementById("temperature_buffer").innerHTML = (data.temperature_buffer).toFixed(2);
 		//document.getElementById("pressure_air_supply").innerHTML = (data.pressure_air_supply).toFixed(2);
-		//document.getElementById("pressure_air_regulated").innerHTML = (data.pressure_air_regulated).toFixed(2);		
+		//document.getElementById("pressure_air_regulated").innerHTML = (data.pressure_air_regulated).toFixed(2);
 		//document.getElementById("pressure_o2_supply").innerHTML = (data.pressure_o2_supply).toFixed(2);
 		//document.getElementById("pressure_o2_regulated").innerHTML = (data.pressure_o2_regulated).toFixed(2);
 //document.getElementById("pressure_patient").innerHTML = (data.pressure_patient).toFixed(2);
-		//document.getElementById("pressure_diff_patient").innerHTML = (data.pressure_diff_patient).toFixed(2);		
+		//document.getElementById("pressure_diff_patient").innerHTML = (data.pressure_diff_patient).toFixed(2);
 //document.getElementById("fsm_state").innerHTML = (data.fsm_state).toFixed(2);
 		//document.getElementById("version").innerHTML = (data.version).toFixed(2); //Commented because not included in the html part
 		}
@@ -217,13 +175,13 @@
 	setInterval('update_variables()', 1000);
 
   </script>
-  
+
 
 
 	{% endblock %}
 	{% block body_scripts %}
 
-<script src="{{ url_for('static', filename='js/Chart-plot.js') }}"></script>
+<script src="{{ url_for('static', filename='js/Chart-display.js') }}"></script>
 
 	<script>
 var prev_val;
@@ -231,13 +189,24 @@ var prev_val;
 $('.input-editable').focus(function() {
     prev_val = $(this).val();
 }).change(function() {
-     $(this).blur() // Firefox fix as suggested by AgDude
+$(this).blur() // Firefox fix as suggested by AgDude
+
+window.createNotification({
+  closeOnClick: 0,
+  displayCloseButton: 1,
+  positionClass: "nfc-bottom-right",
+  showDuration: false,
+  theme: "info"
+  })({
+    title: "Screen Lock",
+    message: "Screen has locked due to timeout"
+  });
     var success = confirm('Are you sure you want to change the ' + $(this).name + " from" + prev_val + " to " + $(this).val());
     if(success)
 {
 //send to hevserver
 $(this).val($(this).val());
-    }  
+    }
     else
     {
         $(this).val(prev_val);
