--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -5985,7 +5985,7 @@ div.active{
 
 }
 
-.sb-nav-button{ border: 1px solid var(--cern); width:95px; fill:none;
+.sb-nav-button{ border: 2px solid var(--cern); width:95px; background-color:none;
 
     display: inline-block;
     //text-shadow: 0 0 2px rgba(0,0,0,.3);
@@ -6102,10 +6102,16 @@ border: 1px solid rgba(0, 0, 0, 0.125);
     height:calc((100vh - var(--top-height) - 0.5rem)/4.0 - 0.5rem);
 }
 
+.range-button-container{
+    height:2.0rem;
+    margin-left:auto;
+    margin-right:auto;
+}
+
 .main-chart-container {
     position:relative;
     width:100%;
-    height:calc((100vh - var(--top-height) - 0.5rem)/3.0);
+    height:calc((100vh - var(--top-height) - 0.5rem - 2.0rem)/3.0); // 2.0rem if for the range-button container
 }
 
 @media (min-height: 1200px) {
