Adding first prototype of gauge chart

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -67,7 +67,8 @@
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">P<sub>Peak</sub></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id="p_peak" readOnly disabled value=20.0>cmH2O</div>
+		  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id="p_peak" readOnly disabled value=20.0>cmH2O</div> -->
+		  <div class = "main-chart-container"><canvas id="example_gauge"></canvas></div>
 	    </div>
 	
 	<!--- end row 1 -->
