more implementation of locks and timeouts

--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -91,6 +91,12 @@ html {
 	
     }
 }
+@media (min-width: 1400px) {
+    html{
+	font-size: 30px;
+	
+    }
+}
 
 
 
@@ -1843,8 +1849,8 @@ small,
 
 .card-body {
   flex: 1 1 auto;
-  min-height: 1px;
   padding: 1.25rem;
+  align-items:center;
 }
 
 .card-title {
@@ -6076,20 +6082,17 @@ border: 1px solid rgba(0, 0, 0, 0.125);
 .col-cards-main {
     flex: 0 0 41.6666666667%;
     max-width: 41.6666666667%;
-    //display: flex;
-    //flex-wrap: wrap;    
 }
 .card-reading{
     position: relative;
-    //display: flex;
-    //flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
     background-color: #fff;
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
-    
+    display:flex;
+    flex-direction:column;
     flex: 0 0 31.8%;
     max-width: 31.8%;
     padding-right: 0.15rem !important;
@@ -6113,11 +6116,17 @@ border: 1px solid rgba(0, 0, 0, 0.125);
     width:100%;
     height:calc((100vh - var(--top-height) - 0.5rem - 2.0rem)/3.0); // 2.0rem if for the range-button container
 }
-
+.reading-wrapper{
+    margin-top:auto;
+    margin-bottom:auto;
+}
 @media (min-height: 1200px) {
     .card-reading {
 	flex: 0 49.1%;
 	max-width: 49.1%;
     }
     
+}
+.nav-link-disabled {
+    pointer-events: none;
 }
